fixed nav header so it doesnt overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,42 +1,84 @@
-* {
+/* {
     border: solid 1px salmon ;
     margin: 0;
     padding: 0;
-}
+}*/
 body {
     min-height: 100vh;
 }
-header { 
-    height: 100px;
-    background-color: #2a607c;
-    color: white;
-    position: relative;
-}
-#site-header {
+html {
+    padding: 0;
+    margin: 0;
+    font-family: "Trebuchet MS";
+  }
+  #header {
+    background-color: #2a607c ;
+    padding: 20px 0;
+    width: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+  }
 
-    font-size: 40px;
-}
-#site-nav {
+  .container {
+    width: 86%;
+    margin: 0 auto;
+  }
+  #header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  #Shay {
+    justify-content: left;
+    display: flex;
+    margin-left: 31px;
+  }
+  
+  .site-nav ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+  }
+  .site-nav ul li {
+    float: right;
+    margin-right: 25px;
+    font-size: 18px;
+  }
+  .site-nav ul li a {
+    text-decoration: none;
+    color: black;
+  }
+ li:hover {
+    background-color: pink;
+  }
+
+  .banner {
+    min-height: 750px;
+    max-height: 750px;
+    background-size: cover;
+  }
+/*.site-nav {
     position:absolute;
     max-width: 400px;
     right: 0;
     top: 40px;
 }
 
-#site-nav ul {
+.site-nav ul {
 list-style-type: none;
 padding: 0;
 margin: 0;
 }
 
-#site-nav ul li {
+.site-nav ul li {
     display:inline;
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 font-size: 20px;
 padding-top: 15px;
 margin-right: 20px;
 float: right;
-}
+}*/
 
 main { 
     min-height: 80vh;
